--- a/package.json
+++ b/package.json
@@ -9,21 +9,29 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@radix-ui/react-avatar": "^1.1.1",
 		"@radix-ui/react-collapsible": "^1.1.1",
+		"@radix-ui/react-dialog": "^1.1.2",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-navigation-menu": "^1.2.1",
 		"@radix-ui/react-popover": "^1.1.2",
+		"@radix-ui/react-select": "^2.1.2",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@tanstack/react-table": "^8.20.5",
 		"axios": "^1.7.7",
+		"axios-auth-refresh": "^3.3.6",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"cookie": "^1.0.1",
 		"geist": "^1.3.1",
 		"lucide-react": "^0.453.0",
 		"next": "14.2.15",
-		"next-auth": "^4.24.8",
+		"next-auth": "^5.0.0-beta.25",
 		"react": "^18",
 		"react-dom": "^18",
+		"set-cookie-parser": "^2.7.1",
 		"tailwind-merge": "^2.5.4",
 		"tailwindcss-animate": "^1.0.7"
 	},
@@ -31,6 +39,7 @@
 		"@types/node": "^20",
 		"@types/react": "^18.3.11",
 		"@types/react-dom": "^18.3.1",
+		"@types/set-cookie-parser": "^2.4.10",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.15",
 		"postcss": "^8",
